--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,8 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.22",
+    "jose": "^6.1.3",
+    "lru-cache": "^11.2.4",
     "lucide-react": "^0.545.0",
     "next": "^16.0.8",
     "react": "19.1.0",
